               calculate the natural DRC was changed and now yields a
               maximum LxTx value indistinguishable from nN(ss).

             • Numeric output in the plot should now always be inside
               the plotting frame.

             • The number of digits for the numeric output in the plot
               was slightly adjusted.

         • ‘plot_FilterCombinations()’

             • Add interactive mode (‘interactive = TRUE’)

         • ‘plot_GrowthCurve()’

             • The function now turns ‘Inf’ into ‘NA’,

             • the argument ‘na.rm’ is defunct and should not be used
               anymore,

             • minor code modifications to handle special cases such as
               input values with a ‘data.frame’ with no error column,

             • extent examples by for test data set by Berger & Huntley
               (1989).

         • ‘plot_Historgram()’

             • The forwarded argument ‘breaks’ was not treated
               correctly (#54); fixed.

         • ‘plot_RLum()’

             • The function now supports plotting even of highly nested
               lists of `RLum-objects`.

         • ‘plot_RLum.Analysis()’

             • The option `col` was not working as expected if `black`
               was provided; fixed.

         • ‘read_BIN2R()’

             • The function unexpectetly dropped are warning for an
               unused connection; fixed,

             • if a file link was provided and the argument ‘pattern’
               was set and error was shown; fixed.

         • ‘read_Daybreak2R()’

             • The functions did not work anymore on ASCII files;
               fixed!

         • ‘read_XSYG2R()’

             • Argument ‘verbose’ added for more consistency with other
               functions,

             • the functions now supports the import form files via the
               internet,

             • minor modifications to support minimal examples without
               'recordType',
